--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">MetroRappid</string>
     <string name="hello_world">Hello world!</string>
+    <string name="getting_location">Getting Location</string>
 
 </resources>
