Dicking around with styling. I don't like what I've got so far. I think a Cards based UI will be the next thing to try.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">MetroRappid</string>
     <string name="hello_world">Hello world!</string>
     <string name="getting_location">Getting Location</string>
+    <string name="last_seen">last seen</string>
 
 </resources>
