reverted back to skeleton RouteViewActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">MetroRappid</string>
     <string name="hello_world">Hello world!</string>
     <string name="getting_location">Getting Location</string>
-    <string name="title_activity_route_view_activity">RouteViewACtivity</string>
+    <string name="title_activity_route_view">RouteViewActivity</string>
     <string name="action_settings">Settings</string>
 
 </resources>
