--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="getting_location">Getting Location</string>
     <string name="title_activity_route_view">RouteViewActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_route_view_activity">RouteViewActivity</string>
 
 </resources>
